--- a/styles.scss
+++ b/styles.scss
@@ -85,6 +85,23 @@ main {
   padding: 0 3rem;
   z-index: 1000;
 
+  .hamburger {
+    cursor: pointer;
+    padding: 10px;
+    gap: 5px;
+    flex-direction: column;
+    display: none;
+    z-index: 1001;
+
+    & span {
+      height: 3px;
+      width: 25px;
+      background: $extra-color;
+      border-radius: 2px;
+      transition: 0.3s ease;
+    }
+  }
+
   .nav-left {
     li {
       list-style: none;
@@ -665,18 +682,49 @@ body {
 
 @media screen and (max-width: 576px) {
   .navigation {
-    gap: 1rem;
-    .nav-left {
-      li a {
-        font-size: 20px;
-      }
+    .hamburger {
+      display: flex;
     }
 
     .nav-right {
-      gap: 0.5rem;
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 70%;
+      height: 100vh;
+      background-color: $box-color;
+      flex-direction: column;
+      justify-content: center;
+      gap: 2rem;
+      transition: right 0.3s ease-in-out;
+      padding: 2rem;
+      box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
 
-      li a {
-        font-size: 14px;
+      &.active {
+        right: 0;
+      }
+
+      li {
+        width: 100%;
+        text-align: center;
+
+        a {
+          color: $primary-color;
+          font-size: 1.2rem;
+          display: block;
+          padding: 1rem 0;
+          transition: color 0.3s ease;
+
+          &:hover {
+            color: $extra-color;
+          }
+        }
+
+        #resume-button {
+          width: 100%;
+          text-align: center;
+          margin-top: 1rem;
+        }
       }
     }
   }
