--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ main {
   padding: 0 3rem;
 }
 
+section {
+  scroll-margin-top: 94px;
+}
+
 .navigation {
   display: flex;
   justify-content: center;
