--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,6 @@ main {
   padding: 0 3rem;
 }
 
-section {
-  scroll-margin-top: 100px;
-}
-
 .navigation {
   display: flex;
   justify-content: center;
@@ -172,6 +168,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+  scroll-margin-top: 100px;
 }
 .about-me .about-me-title {
   font-family: "Cal Sans", sans-serif, helvetica;
@@ -226,6 +223,10 @@ body {
   height: 20rem;
   border-radius: 10px;
   width: auto;
+}
+
+.projects {
+  scroll-margin-top: 120px;
 }
 
 .container-project-title {
